<resources>
    <string name="app_name">Kepegawaian</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="submitted_lang">Submitted language:</string>
    <string name="tt_time_gmt">TrueTime: %1$s [GMT]</string>
    <string name="menu_apsensi">Absensi</string>
    <string name="menu_Cuti">Cuti</string>
    <string name="menu_Riwayat">Riwayat Apsensi</string>
    <string name="menu_jadwal">Riwayat</string>

    <string name="button">click button</string>
    <string name="dialogTitle">Keluar</string>
    <string name="dialogMessage">Apakah anda mau keluar?</string>
    <string name="menu_informasi">informasi</string>
    <string name="menu_profile">profile</string>

    <string-array name="agama">
        <item>Islam</item>
        <item>Kristen</item>
        <item>Hindu</item>
        <item>Budha</item>

    </string-array>

    <string-array name="jabatan">
        <item>Pegawai Tetap</item>
        <item>Calon Pegawai Tetap</item>
        <item>Kontrak</item>
        <item>Magang</item>

    </string-array>

    <string-array name="genders">
        <item>Laki laki</item>
        <item>perempuan</item>


    </string-array>


    <string  name="descripsi">informasi adalah sebuah beritainformasi adalah sebuah beritainformasi adalah sebuah berita informasi adalah sebuah berita
    informasi adalah sebuah beritainformasi adalah sebuah beritainformasi adalah sebuah beritainformasi adalah sebuah berita
    informasi adalah sebuah beritainformasi adalah sebuah berita</string>
    <string name="absensi">absensi</string>
    <string name="jl_m_syafe_i_no_11_ps_baru_kec_padang_panjang_bar_kota_padang_panjang_sumatera_barat_27118">Jl. M. Syafe\'i No.11, Ps. Baru, Kec. Padang Panjang Bar., Kota Padang Panjang, Sumatera Barat 27118</string>
    <string name="nama">Nama :</string>
</resources>